--- a/first-project/my-first-app/src/app/servers/servers.component.html
+++ b/first-project/my-first-app/src/app/servers/servers.component.html
@@ -19,12 +19,11 @@
  <label for="">UserName</label>
  <input type="text"
   class="form-control"
-  [(ngModel)]= "userName"
-  (input)= "onEnableSetUser()">
+  [(ngModel)]= "userName">
 
 <p [innerText]= 'userName'></p>
 
 <button
   class="btn btn-primary"
-  [disabled]="enableSetUser"
-  (click)="onSetUserName()">Set user name</button>
+  [disabled]="userName === ''"
+  (click)="userName = ''">Set user name</button>
