--- a/first-project/my-first-app/src/app/servers/servers.component.html
+++ b/first-project/my-first-app/src/app/servers/servers.component.html
@@ -1,29 +1,16 @@
-<!-- <label for="">Server Name</label> -->
+<label for="">Server Name</label>
 <!-- <input type="text"
   class="form-control"
   (input)= "onUpdateServerName($event)"> -->
-<!-- <input type="text"
+<input type="text"
   class="form-control"
-  [(ngModel)]="serverName"> -->
+  [(ngModel)]="serverName">
 <!-- <p>{{ serverName }}</p> -->
-<!-- <button
+<button
     class="btn btn-primary"
     [disabled]="!allowNewServer"
-    (click)="onCreateServer()">Add server</button> -->
+    (click)="onCreateServer()">Add server</button>
 <!-- <p [innerText]="allowNewServer"></p> -->
-<!-- <p>{{serverCreationStatus}}</p> -->
-<!-- <p>servers works!</p> -->
- <!-- <app-server></app-server> -->
-
-
- <label for="">UserName</label>
- <input type="text"
-  class="form-control"
-  [(ngModel)]= "userName">
-
-<p [innerText]= 'userName'></p>
-
-<button
-  class="btn btn-primary"
-  [disabled]="userName === ''"
-  (click)="userName = ''">Set user name</button>
+<p>{{serverCreationStatus}}</p>
+<p>servers works!</p>
+ <app-server></app-server>
