--- a/first-project/basic-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/first-project/basic-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,7 +14,7 @@
     appDropdown>
       <button type="button" class="btn btn-primary dropdown-toggle">Maange Recipe <span class="caret"></span> </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Add Shopping List</a></li>
+        <li><a (click)="onAddToShoppingList()">Add Shopping List</a></li>
         <li><a href="#">Edit Shopping List</a></li>
         <li><a href="#">Delete Shopping List</a></li>
       </ul>
@@ -28,6 +28,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredient
+    <ul class="list-group">
+      <li class="list-group-item"
+        *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+    </ul>
   </div>
 </div>
